# Equitable-Polling-Locations

./: .code-workspace  .gitignore  .pylintrc  CITATION.cff  CLC_South_Carolina_report.tex  CLC_cleaning.r  CONTRIBUTING-Daphne.md  CONTRIBUTING.md  Dockerfile  GMAP_README.md  GMAP_data.py  GMAP_distance_report.qmd  GMAP_driving_distancereport.qmd  Gwinett_config.py  Gwinett_run.py  List_of_features.md  README.md  README_old.md  Savannah_scratch.r  add_GMAP_distance_m.py  alembic.ini  auto_generate_config.py  backfill_data.py  base_config.py  base_config.yaml  base_config_2.py  base_config_new.py  base_config_new_1.py  bash_setup.sh  bigquery_test_upload.py  build_model.py  build_source_data.ipynb  census_key.py  colab_Gwinnett_expanded_multi_21_22_23_24_25.ipynb  colab_Gwinnett_expanded_multi_26_27_28_29_30.ipynb  colab_Gwinnett_full_11.ipynb  colab_Gwinnett_full_multi_11_12_13.ipynb  colab_Gwinnett_full_multi_14_15_16.ipynb  colab_Gwinnett_full_multi_17_18_19.ipynb  colab_Gwinnett_full_multi_20_21_22.ipynb  (+65 more)
Bergen_NJ/: Bergen_NJ.yaml
Berkeley_County_SC_original_configs/: Berkeley_config_original_2014.yaml  Berkeley_config_original_2016.yaml  Berkeley_config_original_2018.yaml  Berkeley_config_original_2020.yaml  Berkeley_config_original_2022.yaml
Berkeley_County_SC_original_configs_log/: Berkeley_County_SC_original_2014.yaml_template  Berkeley_County_SC_year_2014.yaml  Berkeley_County_SC_year_2016.yaml  Berkeley_County_SC_year_2018.yaml  Berkeley_County_SC_year_2020.yaml  Berkeley_County_SC_year_2022.yaml
Berkeley_County_SC_results/: Berkeley_County_SC_original_configs.Berkeley_config_original_2014_edes.csv  Berkeley_County_SC_original_configs.Berkeley_config_original_2014_precinct_distances.csv  Berkeley_County_SC_original_configs.Berkeley_config_original_2014_residence_distances.csv  Berkeley_County_SC_original_configs.Berkeley_config_original_2014_result.csv  Berkeley_County_SC_original_configs.Berkeley_config_original_2016_edes.csv  Berkeley_County_SC_original_configs.Berkeley_config_original_2016_precinct_distances.csv  Berkeley_County_SC_original_configs.Berkeley_config_original_2016_residence_distances.csv  Berkeley_County_SC_original_configs.Berkeley_config_original_2016_result.csv  Berkeley_County_SC_original_configs.Berkeley_config_original_2018_edes.csv  Berkeley_County_SC_original_configs.Berkeley_config_original_2018_precinct_distances.csv  Berkeley_County_SC_original_configs.Berkeley_config_original_2018_residence_distances.csv  Berkeley_County_SC_original_configs.Berkeley_config_original_2018_result.csv  Berkeley_County_SC_original_configs.Berkeley_config_original_2020_edes.csv  Berkeley_County_SC_original_configs.Berkeley_config_original_2020_result.csv  (+6 more)
(+7238 files in other folders)
